@@ -179,6 +179,7 @@
             --add-opens=java.base/java.io=ALL-UNNAMED
             --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
             --add-opens=java.desktop/javax.sound.sampled=ALL-UNNAMED
+            --add-exports=java.desktop/com.sun.media.sound=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             -Dvavi.test.dev.null=@{dev.null}
             -Dvavi.test.volume=@{vavi.test.volume}
